[metadata]
name = f360_insert_decal_rpa
version = attr: f360_insert_decal_rpa.__version__
author = Hajime Nakazato
author-email = hajime@kaoriha.org
home-page = https://github.com/hajimen/f360_insert_decal_rpa
description = "f360_insert_decal_rpa is a Python library for Robotic Process Automation (RPA) of Autodesk Fusion 360's **Insert -> Decal -> Insert from my computer** operation."
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords =
    F360
    Fusion360
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/hajimen/f360_insert_decal_rpa/issues
    Changelog = https://github.com/hajimen/f360_insert_decal_rpa/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.7
packages = f360_insert_decal_rpa
include_package_data = true
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pywinauto >= 0.6.8

[options.package_data]
f360_insert_decal_rpa = 
    _ctypes.pyd
